# wordle_app

./: Cargo.toml
migrations/: 20241229145457_create-users.sql
src/: db.rs  main.rs  models.rs
src/routes/: admin.rs  auth.rs  home.rs  mod.rs  staticfiles.rs  user.rs
src/static/: index.html
