[package]
name = "wordle_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6" }
tokio = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
http = "1.2.0"

tower = "0.4"
tower-http = {version = "0.4", features = ["fs"] }
tower-service ="0.3.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
bcrypt = "0.16.0"
dotenv = "0.15.0"
dotenvy = "0.15"